<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:id="@+id/z1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Which service do you require?"
            android:textSize="24dp"
            android:textColor="@color/Black"
            android:gravity="center"
            android:textStyle="bold" />

    </LinearLayout>




    <ImageView
        android:id="@+id/z2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/Grey"
        android:layout_below="@id/z1"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/z1">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="28dp"/>


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="150dp"/>



    </RadioGroup>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@id/z2"
        >



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/z3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="28dp" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_toRightOf="@id/z3"
                android:text="@string/radio1text1"
                android:layout_marginLeft="35dp"
                android:textSize="22dp"
                android:textColor="@color/Black"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/active_dot"
                android:layout_below="@id/z3"
                android:layout_marginTop="23dp"
                android:layout_marginLeft="110dp"/>

            <TextView
                android:id="@+id/z4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/z3"
                android:text="Free Inspection"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="16dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/active_dot"
                android:layout_below="@id/z4"
                android:layout_marginTop="23dp"
                android:layout_marginLeft="110dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/z4"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="130dp"
                android:text="@string/radio1text2"/>

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/Grey"
        android:layout_below="@+id/layout2"/>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@id/layout2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/c1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="28dp" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_toRightOf="@id/c1"
                android:text="@string/radio2head"
                android:layout_marginLeft="35dp"
                android:textSize="22dp"
                android:textColor="@color/Black"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/active_dot"
                android:layout_below="@id/c1"
                android:layout_marginTop="23dp"
                android:layout_marginLeft="110dp"/>

            <TextView
                android:id="@+id/z6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/c1"
                android:text="@string/radio2text1"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="16dp"/>

        </RelativeLayout>

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/Grey"
        android:layout_below="@+id/layout3"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="#ffffff">

        <Button
            android:id="@+id/next1_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_alignParentBottom="true"
            android:text="Next"
            android:background="@color/Black"
            android:textSize="18dp"
            android:textColor="#ffffff"/>

    </RelativeLayout>



</RelativeLayout>